--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "antd": "^5.8.6",
     "compression": "^1.7.4",
+    "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
